2005-05-31  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* doc/manual.rst: document the refinement in null treatment in
	fetch. 

	* src/pydo/multifetch.py (iterfetch): add a little intelligence
	about whether to map an object with all null values to None. 

	* src/pydo/base.py (arrayfetch): note in docstring that this
	function is deprecated.

	* src/pydo/joins.py: note in docstring that this module is
	deprecated. 

	* src/pydo/operators.py: removed redundancy in docstring.

	* doc/examples/pim.py: changed import here as well.

	* doc/api/Makefile (EPYDOC): change for package name.

	* doc/manual.rst: change package name, and name of fetch
	function. 

	* src/pydo/multifetch.py: renamed module again, and renamed
	scatterfetch back to fetch.  src/pydo/__init__.py: changed import
	from fetch to multifetch.

	* setup.py, tests, src/pydo: renamed package again, from PyDO2 to pydo.  
	
2005-05-30  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/fetch.py: renaming fetch to scatterfetch (fetch
	conflicts with module name); stopped flattening the resultSpec.

	* doc/manual.rst: documenting scatterfetch.

2005-05-29  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/fetch.py (iterfetch): add the columns to the column
	list in sorted order, so that if you don't use $COLUMNS you can at
	least predict what the right order is.

	* src/PyDO2/base.py (PyDO.deleteSome): fix for silly but bad bug
	reported by Steve Kieu.

	* src/PyDO2/fetch.py (fetch): remove iterfetch from __all__, and
	add great big docstring.

	* src/PyDO2/base.py: removing arrayfetch from __all__.

	* src/PyDO2/__init__.py: importing from fetch.py, and no longer
	importing from joins.py.  Also, increased version number to alpha
	3. 

	* src/PyDO2/{base,utils}.py: removing redundant util function. 

	* src/PyDO2/fetch.py: first cut at sql template
	method.

	* src/PyDO2/drivers/{psycopgconn,sqliteconn,mssqlconn}.py, 
	src/PyDO2/{base,dbi}.py: change all  str tests to basestring.
